adding new files

--- a/Slot-1/Storebin-1.html
+++ b/Slot-1/Storebin-1.html
@@ -1,11 +1,17 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html> 
+<html lang="en">
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>  Storebin  </title>
-		<link href="LightSheet-1" media= "screen" rel=
+		<meta http-equiv="Content-Type" content="text/html"; charset="utf-8">
+		<title>  Storebin-1  </title>
+		<link rel="stylesheet" href="Lightsheet-1.css" />
 	</head>
 	<body>
-		Hello world
+		<div class="head">
+			 WELCOME TO&nbsp; <span class><span class="xbin"></span> Bay</span>
+			<br/> 
+			<div class="subtitle">
+				cargo Id = S-5505722069-7732
+			</div>
+		</div>
 	</body>
 </html>
